syntax="proto3";

package chat_proto;
import "google/protobuf/wrappers.proto";
service ChatProto {
    rpc FindByIds(FindByIdsRequest) returns (ChatListResponse){};
    // 发送消息
    rpc SendUserMessage(SendUserMessageRequest) returns (Message) {};
    // 机器人发送消息 todo
    rpc SendBotMessage(SendBotMessageRequest) returns (Message) {};
    // 增加用户
    rpc AddUsers(AddUserRequest) returns (google.protobuf.BoolValue){} ;
    //  移除用户
    rpc RemoveUsers(RemoveUserRequest) returns (google.protobuf.BoolValue){}
    // 改变创建者
    rpc ChangeCreator(ChangeCreatorRequest) returns (google.protobuf.BoolValue){};
    // 创建会话
    rpc Create(CreateRequest) returns (Chat){};
    // 退出会话
    rpc ExitByIds(ExitByIdsRequest) returns (google.protobuf.BoolValue){};
    // 删除会话
    rpc DropByIds(DropByIdsRequest) returns (google.protobuf.BoolValue){};
    // 清空会话消息
    rpc ClearMessageByIds(ClearMessageByIdsRequest) returns (google.protobuf.BoolValue){};
    // 删除某用户所有消息
    rpc ClearMessageByUserIds(ClearMessageByUserIdsRequest) returns (google.protobuf.BoolValue){};

    rpc RemoveUserByIds(RemoveUserByIdsRequest) returns (google.protobuf.BoolValue){};
    rpc RemoveUserByUserIds(RemoveUserByUserIdsRequest) returns (google.protobuf.BoolValue){};
    // 修改 会话配置
    rpc changeChatConfig(ChatConfigRequest) returns (ChatConfigResponse){};
}
message Chat {
    string id = 1;
    uint64 creatorId = 2;
    uint64 lastSequence = 3;
    int32 businessType = 4;
    uint64 createdAt = 5;
    uint64 updatedAt = 6;
}
message Message{
    string id = 1;
    string chatId = 2;
    uint64 senderId = 3;
    int32 senderType = 4;
    uint64 sequence = 5;
    uint64 createdAt = 6;
    uint64 updatedAt = 7;
    uint64 deletedAt = 8;
}
message FindByIdsRequest {
    repeated string ids = 1;
}
message ChatListResponse {
    repeated Chat chats = 1;
}
message RemoveUserRequest {
    string id = 1;
    repeated uint64 userIds = 2;
}
message RemoveUserByIdsRequest {
    repeated string ids = 1;
    uint64 userId = 2;
}
message RemoveUserByUserIdsRequest{
    repeated uint64 userIds = 1;
}
message ChangeCreatorRequest {
    string id = 1;
    uint64 creatorId = 2;
}
enum MessageType {
    TEXT = 0;
    IMAGE = 1;
    VIDEO = 2;
    FILE = 3;
    LINK = 4;
}
message SendUserMessageRequest {
    string id = 1;
    uint64 userId = 2;
    MessageType type = 3;
    string content = 4;
    repeated uint64 receiverUserIds = 5;
    string msgId = 6;
}
message SendBotMessageRequest {
    string id = 1;
    int64 senderId = 2;
    MessageType type = 3;
    string content = 4;
    string msgId = 5;
}
message SendBotMessageResponse {
    repeated Message items = 1;
}

message AddUserRequest {
    string id = 1;
    repeated uint64 userIds = 2;
}
message ExitByIdsRequest {
    repeated string ids = 1;
    repeated uint64 userIds = 2;
}
message DropByIdsRequest {
    repeated string ids = 1;
}
message ClearMessageByIdsRequest {
    repeated string ids = 1;
}
message ClearMessageByUserIdsRequest {
    repeated uint64 userIds = 1;
}

message CreateRequest {
    // userId 或 groupId 或 bot Id
    uint64 creatorId = 1;
    int32 businessType = 2;
    repeated uint64 userIds = 3;
}

message ChatConfigRequest {
    string id = 1;
    uint64 userId = 2;
    string changeField = 3;
    string value = 4;
}

message ChatConfigResponse{
    string id = 1;
    int32 isTop = 2;
    int32 isMute = 3;
    int32 isShow = 4;
    int32 isHide = 5;
}